--- a/WER.ipynb
+++ b/WER.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "id": "21bcc75a-104b-4510-a587-38a8cb26beca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/Projects/audio-benchmark/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from evaluate import load"
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "id": "988ce711-8bb1-42e7-89cf-d22cc27f0bc7",
    "metadata": {},
    "outputs": [],
@@ -32,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 76,
    "id": "8c2d4460-296b-4101-9dca-247c18053003",
    "metadata": {},
    "outputs": [],
    "source": [
     "files = ['audios', 'gcp-stt', 'oci_speech', 'whisper-large-v3-turbo']\n",
-    "df_audios, df_stt, df_whisper, df_oci = (pd.read_csv(f\"data/{f}.csv\") for f in files)"
+    "df_audios, df_stt, df_oci, df_whisper = (pd.read_csv(f\"data/{f}.csv\") for f in files)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 84,
    "id": "44ad1b4a-2c69-4b54-832e-0be2d4fce26b",
    "metadata": {},
    "outputs": [
@@ -96,20 +87,6 @@
        "      <td>9.972</td>\n",
        "      <td>48000</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>data/audio/00084.mp3</td>\n",
-       "      <td>Duas mulheres e uma menina levantam com troféus.</td>\n",
-       "      <td>10.176</td>\n",
-       "      <td>48000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>data/audio/00092.mp3</td>\n",
-       "      <td>Mesa de sinuca no bar</td>\n",
-       "      <td>10.620</td>\n",
-       "      <td>48000</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -119,32 +96,16 @@
        "0  data/audio/00010.mp3  Já é uma sorte que você é poupado de um acidente.   \n",
        "1  data/audio/00076.mp3  esquadrão da morte, jogo do bicho, máfia do ap...   \n",
        "2  data/audio/00083.mp3  burnout, anorexia nervosa, bulimia, periódica,...   \n",
-       "3  data/audio/00084.mp3   Duas mulheres e uma menina levantam com troféus.   \n",
-       "4  data/audio/00092.mp3                              Mesa de sinuca no bar   \n",
        "\n",
        "   duration     sr  \n",
        "0     9.648  48000  \n",
        "1     9.756  48000  \n",
-       "2     9.972  48000  \n",
-       "3    10.176  48000  \n",
-       "4    10.620  48000  "
+       "2     9.972  48000  "
       ]
      },
-     "execution_count": 25,
      "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_audios.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "262c7347-5de4-4547-abbe-83c7333b2f0b",
-   "metadata": {},
-   "outputs": [
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -190,18 +151,6 @@
        "      <td>marxia nervosa bulimia perodica alimentar a co...</td>\n",
        "      <td>9.91</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>00084.mp3</td>\n",
-       "      <td>duas mulheres em uma menina levantam com troféus</td>\n",
-       "      <td>6.32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>00092.mp3</td>\n",
-       "      <td>mesa de sinuca no par</td>\n",
-       "      <td>6.33</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -210,26 +159,12 @@
        "        file                                      transcription  total_seconds\n",
        "0  00010.mp3   já é uma sorte que você é poupado de um acidente           7.97\n",
        "1  00076.mp3  Esquadrão da Morte jogo do bicho máfia do apit...           9.19\n",
-       "2  00083.mp3  marxia nervosa bulimia perodica alimentar a co...           9.91\n",
-       "3  00084.mp3   duas mulheres em uma menina levantam com troféus           6.32\n",
-       "4  00092.mp3                              mesa de sinuca no par           6.33"
+       "2  00083.mp3  marxia nervosa bulimia perodica alimentar a co...           9.91"
       ]
      },
-     "execution_count": 26,
      "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_stt.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "5247b029-3ea4-4b4e-8dfd-0e8f53c38f0a",
-   "metadata": {},
-   "outputs": [
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -275,18 +210,6 @@
        "      <td>Pernalte, anorexia nervosa, bulimia peróidica,...</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>00084.mp3</td>\n",
-       "      <td>Duas mulheres e uma menina levantam com troféus.</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>00092.mp3</td>\n",
-       "      <td>Mesmo de sinuca no parque.</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -295,26 +218,12 @@
        "        file                                      transcription  total_seconds\n",
        "0  00010.mp3      Já é uma sorte você é poupado de um acidente.             17\n",
        "1  00076.mp3  Esquadrão da Morte, Jogo do Bicho, Máfia do Ap...             17\n",
-       "2  00083.mp3  Pernalte, anorexia nervosa, bulimia peróidica,...             21\n",
-       "3  00084.mp3   Duas mulheres e uma menina levantam com troféus.             15\n",
-       "4  00092.mp3                         Mesmo de sinuca no parque.             21"
+       "2  00083.mp3  Pernalte, anorexia nervosa, bulimia peróidica,...             21"
       ]
      },
-     "execution_count": 27,
      "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_whisper.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "e90a572a-fa08-44ca-8377-d4672f8ec605",
-   "metadata": {},
-   "outputs": [
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -360,18 +269,6 @@
        "      <td>...tornal, temorexia nervosa, bulimia periódi...</td>\n",
        "      <td>0.316535</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>00084.mp3</td>\n",
-       "      <td>Duas mulheres e uma menina levantam com troféus.</td>\n",
-       "      <td>0.185692</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>00092.mp3</td>\n",
-       "      <td>Mesa de sinuca no bar.</td>\n",
-       "      <td>0.143915</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -380,87 +277,117 @@
        "        file                                      transcription  total_seconds\n",
        "0  00010.mp3   já é uma sorte que você é poupado de um acidente       0.673280\n",
        "1  00076.mp3   Esquadrão da Morte, Jogo do Bicho, Máfia do A...       0.285897\n",
-       "2  00083.mp3   ...tornal, temorexia nervosa, bulimia periódi...       0.316535\n",
-       "3  00084.mp3   Duas mulheres e uma menina levantam com troféus.       0.185692\n",
-       "4  00092.mp3                             Mesa de sinuca no bar.       0.143915"
+       "2  00083.mp3   ...tornal, temorexia nervosa, bulimia periódi...       0.316535"
       ]
      },
-     "execution_count": 28,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "df_oci.head()"
+    "for df in [df_audios, df_stt, df_oci, df_whisper]:\n",
+    "    display(df.head(3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "id": "c2bd08ab-da0d-4363-9b33-d4ac34d3a7cb",
+   "execution_count": 188,
+   "id": "5e27c581",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.47752808988764045"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "wer.compute(predictions=df_audios.sentence, references=df_stt.transcription)"
+    "def show_info(df_source, df_result):\n",
+    "    error = wer.compute(predictions=df_result.transcription, references=df_source.sentence)\n",
+    "    seconds = df_result.total_seconds.sum()\n",
+    "    minutes, seconds = divmod(int(seconds), 60)\n",
+    "    minutes_output = f\"{minutes} minutes and {seconds} seconds\"\n",
+    "\n",
+    "    df_merge = (df_source\n",
+    "        .rename(columns={'path': 'file', 'sentence': 'reference'})\n",
+    "        .assign(file=df_audios.path.str.split('/').str[-1])\n",
+    "        .merge(df_result, on='file')\n",
+    "    )\n",
+    "    exec_per_second =  (df_merge.total_seconds / df_merge.duration).mean()\n",
+    "\n",
+    "    print(f\"Error (WER):               {error:.4f}\")\n",
+    "    print(f\"Mean exec. time by audio:  {df_result.total_seconds.mean():.2f}\")\n",
+    "    print(f\"Mean exec. per second:     {exec_per_second:.2f}\")\n",
+    "    print(f\"Total Time for 100 audios: {minutes_output}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "b69f93b3-afe2-43ed-ad76-95d0c4f99f95",
+   "execution_count": 196,
+   "id": "586967b7",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.2593283582089552"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===== Google STT =====\n",
+      "Error (WER):               0.4839\n",
+      "Mean exec. time by audio:  8.66\n",
+      "Mean exec. per second:     0.86\n",
+      "Total Time for 100 audios: 14 minutes and 26 seconds\n"
+     ]
     }
    ],
    "source": [
-    "wer.compute(predictions=df_audios.sentence, references=df_whisper.transcription)"
+    "print('===== Google STT =====')\n",
+    "show_info(df_audios, df_stt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "8d7f75a4-eaeb-4009-a46f-1a19b6320156",
+   "execution_count": 197,
+   "id": "8f98cc2b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.24442379182156135"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===== OCI Speech =====\n",
+      "Error (WER):               0.2638\n",
+      "Mean exec. time by audio:  22.01\n",
+      "Mean exec. per second:     2.19\n",
+      "Total Time for 100 audios: 36 minutes and 41 seconds\n"
+     ]
     }
    ],
    "source": [
-    "wer.compute(predictions=df_audios.sentence, references=df_oci.transcription)"
+    "print('===== OCI Speech =====')\n",
+    "show_info(df_audios, df_oci)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "id": "16459d06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===== Whisper Large v2 Large Turbo + Flash Attn v2 =====\n",
+      "Error (WER):               0.2381\n",
+      "Mean exec. time by audio:  0.24\n",
+      "Mean exec. per second:     0.02\n",
+      "Total Time for 100 audios: 0 minutes and 23 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('===== Whisper Large v2 Large Turbo + Flash Attn v2 =====')\n",
+    "show_info(df_audios, df_whisper)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a837084-aebf-4ac7-ac2b-c8eaae382fa0",
+   "id": "d7156d25",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -468,15 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8454374b-b1ea-462a-a9b2-ebf39c5db211",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18179d94-717b-465f-a565-5cba5166f41e",
+   "id": "87059719",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -484,7 +403,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
